package aim.ene.solex.prototypeSafa.Service;

import org.springframework.stereotype.Service;

@Service
public class BuildingBlockService {

}
